fix spacing in certificates

--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -183,7 +183,7 @@ p {
     .upper-row-certificate {
         position: relative;
         overflow: hidden;
-        margin-bottom: -px;
+        margin-bottom: -10px;
     }
     .job-title, .degree {
         color: $text-color;
@@ -209,7 +209,7 @@ p {
         color: $text-grey;
     }
     .company-certificate {
-        margin-bottom: 10px;
+        margin-bottom: 12px;
         color: $text-grey;
     }
     .project-title {
